# hpp-kwsplus

./: .gitignore  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  configure.ac  kwsPlus.pc.in
build-aux/: boost.m4
doc/: Doxyfile.extra.in  Makefile.am  footer.html  header.html  kwsPlus.dox.in
doc/additionalDoc/: kwsPlus.h
doc/figures/: flatCar.fig
include/: Makefile.am  directPathVector.h  flicDirectPath.h  flicDistance.h  flicSteeringMethod.h  hppActiveDofSetter.h  hppConfigurationShooter.h  hppShooterActiveDof.h  hppVisRdmBuilder.h  kitMat3.h  kwsIPPRdmBuilder2.h  kwsPlusDPLinear.h  kwsPlusDirectPath.h  kwsPlusDistance.h  kwsPlusDistanceFactory.h  kwsPlusDrawRdmBuilderDelegate.h  kwsPlusEdge.h  kwsPlusEdgeFactory.h  kwsPlusKPCARdmBuilder.h  kwsPlusLTRdmBuilder.h  kwsPlusNode.h  kwsPlusNodeFactory.h  kwsPlusPCARdmBuilder.h  kwsPlusRoadmap.h  kwsPlusSMLinear.h  kwsPlusSteeringMethodFactory.h  kwsPlusStopRdmBuilderDelegate.h  kwsPlusTalkingBuilder.h  kwsPlusTalkingShooter.h  reedsSheppDirectPath.h  reedsSheppSteeringMethod.h
include/hpp/kwsplus/direct-path/: direct-path-vector.hh  direct-path.hh  distance-factory.hh  distance.hh  dp-linear.hh  flic-direct-path.hh  flic-distance.hh  flic-steering-method.hh  sm-linear.hh  steering-method-factory.hh
include/hpp/kwsplus/roadmap/: active-dof-setter.hh  configuration-shooter.hh  edge-factory.hh  edge.hh  lt-rdm-builder.hh  node-factory.hh  node.hh  roadmap.hh  shooter-active-dof.hh  talking-builder.hh  vis-rdm-builder.hh
include/kwsPlus/: directPathVector.h  flicDirectPath.h  flicDistance.h  flicSteeringMethod.h  hppActiveDofSetter.h  hppConfigurationShooter.h  hppShooterActiveDof.h  hppVisRdmBuilder.h  kitMat3.h  kwsPlusDPLinear.h  kwsPlusDiffusionNodePickerFactory.h  kwsPlusDiffusionShooterFactory.h  kwsPlusDirectPath.h  kwsPlusDistance.h  kwsPlusDistanceFactory.h  kwsPlusEdge.h  kwsPlusEdgeFactory.h  kwsPlusKPCARdmBuilder.h  kwsPlusLTRdmBuilder.h  kwsPlusNode.h  kwsPlusNodeFactory.h  kwsPlusPCARdmBuilder.h  kwsPlusRoadmap.h  kwsPlusSMLinear.h  kwsPlusSteeringMethodFactory.h  kwsPlusStopRdmBuilderDelegate.h  kwsPlusTalkingBuilder.h  kwsPlusTalkingShooter.h  reedsSheppDirectPath.h  reedsSheppSteeringMethod.h
include/kwsPlus/directPath/: directPathVector.h  flicDirectPath.h  flicDistance.h  flicSteeringMethod.h  kwsPlusDPLinear.h  kwsPlusDirectPath.h  kwsPlusDistance.h  kwsPlusDistanceFactory.h  kwsPlusSMLinear.h  kwsPlusSteeringMethodFactory.h  reedsSheppDirectPath.h  reedsSheppSteeringMethod.h
include/kwsPlus/roadmap/: hppConfigurationShooter.h  hppShooterActiveDof.h  hppVisRdmBuilder.h  kwsPlusDiffusionNodePickerFactory.h  kwsPlusDiffusionShooterFactory.h  kwsPlusEdgeFactory.h  kwsPlusKPCARdmBuilder.h  kwsPlusLTRdmBuilder.h  kwsPlusNodeFactory.h  kwsPlusPCARdmBuilder.h  kwsPlusStopRdmBuilderDelegate.h
src/: CMakeLists.txt  Makefile.am  configuration-shooter.cc  direct-path-vector.cc  direct-path.cc  directPathVector.cpp  distance.cc  dp-linear.cc  edge-factory.cc  edge.cc  flic-direct-path.cc  flic-distance.cc  flic-manager.cc  flic-manager.hh  flic-steering-method.cc  flicDirectPath.cpp  flicDistance.cpp  flicManager.cpp  flicManager.h  flicSteeringMethod.cpp  hppConfigurationShooter.cpp  hppShooterActiveDof.cpp  hppVisRdmBuilder.cpp  kitMat3.cpp  kwsIPPRdmBuilder2.cpp  kwsPlusDPLinear.cpp  kwsPlusDirectPath.cpp  kwsPlusDistance.cpp  kwsPlusDrawRdmBuilderDelegate.cpp  kwsPlusEdge.cpp  kwsPlusEdgeFactory.cpp  kwsPlusNode.cpp  kwsPlusNodeFactory.cpp  kwsPlusRoadmap.cpp  kwsPlusSMLinear.cpp  kwsPlusStopRdmBuilderDelegate.cpp  node-factory.cc  node.cc  reedsSheppDirectPath.cpp  reedsSheppSteeringMethod.cpp  (+5 more)
unitTesting/: Makefile.am  main.cpp  testFlicApproximateDistance.cpp  testFlicCopyAndExtract.cpp  testFlicDerivative.cpp  testFlicDirectPath.cpp  testFlicDirectPath.h  testFlicDirectPathBoundingObjects.cpp  testFlicDirectPathMaxAbsDeriv.cpp  testFlicStraightLine.cpp  testProjectionConstraint.cpp  testProjectionConstraint.h
