# Research carried out within the scope of the Associated
# International Laboratory: Joint Japanese-French Robotics Laboratory
# (JRL)
#
# Author: Florent Lamiraux
#

kwsPlusdir = @includedir@/kwsPlus
kwsPlus_HEADERS = \
	flicDirectPath.h \
	flicSteeringMethod.h \
	directPathVector.h \
	reedsSheppDirectPath.h \
	reedsSheppSteeringMethod.h \
	kitMat3.h \
	kwsPlusRoadmap.h

