# Research carried out within the scope of the Associated
# International Laboratory: Joint Japanese-French Robotics Laboratory
# (JRL)
#
# Author: Florent Lamiraux
#

kwsPlusdir = @includedir@/kwsPlus
kwsPlus_HEADERS = \
	flicDistance.h \
	flicDirectPath.h \
	flicSteeringMethod.h \
	kwsPlusDirectPath.h \
	directPathVector.h \
	reedsSheppDirectPath.h \
	reedsSheppSteeringMethod.h \
	kitMat3.h \
	hppActiveDofSetter.h \
	hppConfigurationShooter.h \
	hppShooterActiveDof.h \
	hppVisRdmBuilder.h \
	kwsPlusPCARdmBuilder.h \
	kwsPlusLTRdmBuilder.h \
	kwsPlusDPLinear.h \
	kwsPlusSMLinear.h \
	kwsPlusRoadmap.h \
	kwsPlusDistance.h \
	kwsPlusSteeringMethodFactory.h \
	kwsPlusDistanceFactory.h \
	kwsPlusDiffusionNodePickerFactory.h


